syntax = "proto3";
package ids;

import "assetmantle/base/ids/v1/identityID.v1.proto";
import "assetmantle/base/ids/v1/anyOwnableID.v1.proto";
import "gogoproto/gogo.proto";

message SplitID {
  option (gogoproto.goproto_getters) = false;

  IdentityID owner_i_d = 1;
  AnyOwnableID ownable_i_d = 2;
}
